# amai_music_player

./: .gitignore  Cargo.toml  LICENSE  README.md  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/amai_music_player/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio.dart  main.dart  metadata_column.dart  music_controls.dart  music_list.dart  providers.dart  utils.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: api.dart  metadata.dart  utils.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
messages/: get_metadata.proto  get_music_files.proto
native/amai_music_player/: Cargo.toml
native/amai_music_player/src/: files.rs  lib.rs  metadata.rs
native/hub/: Cargo.toml
native/hub/src/: handler_functions.rs  lib.rs  with_request.rs
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: metadata.rs  mod.rs  utils.rs
src/: audio.rs  main.rs  style.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
