[package]
name = "amai-music-player"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimization for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
directories = "5.0.1"
kira = "0.8.6"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "61e3d8502fec7e83c584218e598fa20c79363be3"
features = ["tokio"]
